remove single quotes from loaded repositories msg

--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
@@ -24,8 +24,8 @@ creation.core.status.return.new_pipelines=You may now return to the Dashboard to
 creation.core.button.dashboard=Dashboard
 creation.core.repository.title=Which organization does the repository belong to?
 creation.core.repository.choose.title=Choose a repository
-creation.core.repository.loading.count=Loading Repositories... '{0}' so far
-creation.core.repository.loaded.count=Loaded '{0}' repositories
+creation.core.repository.loading.count=Loading Repositories... {0} so far
+creation.core.repository.loaded.count=Loaded {0} repositories
 creation.core.repository.no_repository=The project "'{0}'" has no repositories.
 creation.core.organization.pick_different=Please pick a different project.
 
