Fix invalid username/password message for Bitbucket

--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
@@ -118,7 +118,7 @@ creation.bbserver.choose_server.title=Where is your Bitbucket Server?
 creation.bbserver.version.error=Error checking version of HTTP server. HTTP error: {0}
 
 ## Bitbucket credential screen
-creation.bitbucket.connect.invalid_username_password=Invalid userName and password
+creation.bitbucket.connect.invalid_username_password=Invalid username and/or password
 creation.bitbucket.connect.unexpected_error=Bitbucket credential validation failed with unexpected error. Please try again
 creation.bitbucket.connect=Connect to Bitbucket
 creation.bitbucket.connect.authorize=Jenkins needs user credential to authorize itself with Bitbucket
