fix i18next plural link

--- a/docu/I18N.md
+++ b/docu/I18N.md
@@ -117,7 +117,7 @@ toast.run.stopping=Stopping "~#name~#" #~#runId~#...
 
 ### Plural
 
-> Note: in case you want to use [i18next plural](http://i18next.com/translate/pluralSimple/) you actually have to use the
+> Note: in case you want to use [i18next plural](https://www.i18next.com/plurals.html) you actually have to use the
 last example and the param you have to use is `count`
 
 #### With interpolation
