Add Chinese translation

--- a/blueocean-web/src/main/resources/jenkins/plugins/blueocean/web/Messages_zh.properties
+++ b/blueocean-web/src/main/resources/jenkins/plugins/blueocean/web/Messages_zh.properties
@@ -12,7 +12,8 @@ parametrised.pipeline.cancel=\u53d6\u6d88
 parametrised.pipeline.header=\u9700\u8981\u8f93\u5165
 #运行
 parametrised.pipeline.submit=\u8fd0\u884c
-pipelines=Pipelines
+#流水线
+pipelines=\u6d41\u6c34\u7ebf
 #终止
 toast.abort=\u7ec8\u6b62
 #打开
