--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages_zh.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages_zh.properties
@@ -1,3 +1,5 @@
+#历史
+branchdetail.actionbutton.history=\u5386\u53f2
 # common
 common.date.duration.format=d[d] h[h] m[m] s[s]
 common.date.duration.hint.format=M [month], d [days], h[ hours], m[ minutes], s[ seconds]
@@ -11,8 +13,8 @@ common.pager.more=\u66f4\u591a
 # creation
 #关闭
 creation.core.header.close=\u5173\u95ed
-#创建Pipeline
-creation.core.header.title=\u521b\u5efa\u0050\u0069\u0070\u0065\u006c\u0069\u006e\u0065
+#创建流水线
+creation.core.header.title=\u521b\u5efa\u6d41\u6c34\u7ebf
 #经典创建方式
 creation.core.header.classic=\u7ecf\u5178\u521b\u5efa\u65b9\u5f0f
 #你没有权限创建Pipelines
@@ -132,17 +134,18 @@ creation.githubent.choose_server.title=\u4f60\u7684\u0047\u0069\u0074\u0048\u007
 #开关
 enable=\u5f00\u5173
 # home page / dashboard
-#新的Pipeline
-home.header.button.createpipeline=\u65b0\u7684\u0050\u0069\u0070\u0065\u006c\u0069\u006e\u0065
-home.header.dashboard=Pipelines
+#创建流水线
+home.header.button.createpipeline=\u521b\u5efa\u6d41\u6c34\u7ebf
+#流水线
+home.header.dashboard=\u6d41\u6c34\u7ebf
 #分支
 home.pipelineslist.header.branches=\u5206\u652f
 #健康状态
 home.pipelineslist.header.health=\u5065\u5eb7\u72b6\u6001
-#名字
-home.pipelineslist.header.name=\u540d\u5b57
+#名称
+home.pipelineslist.header.name=\u540d\u79f0
 home.pipelineslist.header.pullrequests=PR
-home.pipelineslist.row.failing={0} \u5931\u8d25
+home.pipelinesernatlist.row.failing={0} \u5931\u8d25
 home.pipelineslist.row.passing={0} \u901a\u8fc7
 #创建新的Pipeline
 home.placeholder.linktext=\u521b\u5efa\u65b0\u7684\u0050\u0069\u0070\u0065\u006c\u0069\u006e\u0065
@@ -240,7 +243,8 @@ rundetail.header.changes.none=\u6ca1\u6709\u4fee\u6539
 rundetail.header.commit=\u63d0\u4ea4
 rundetail.header.tab.artifacts=\u0041\u0072\u0074\u0069\u0066\u0061\u0063\u0074\u0073
 rundetail.header.tab.changes=\u6539\u53d8
-rundetail.header.tab.pipeline=Pipeline
+#流水线
+rundetail.header.tab.pipeline=\u6d41\u6c34\u7ebf
 rundetail.header.tab.tests=\u6d4b\u8bd5
 rundetail.input.cancel=\u7ec8\u6b62
 rundetail.pipeline.description=\u63cf\u8ff0
