Add Chinese localization for main editor page

--- a/blueocean-pipeline-editor/src/main/resources/jenkins/plugins/blueocean/pipeline/editor/Messages_zh.properties
+++ b/blueocean-pipeline-editor/src/main/resources/jenkins/plugins/blueocean/pipeline/editor/Messages_zh.properties
@@ -1,4 +1,22 @@
+#取消
 editor.page.common.cancel=\u53d6\u6d88
+#保存
 editor.page.common.save=\u4fdd\u5b58
+#添加
+editor.page.common.add=\u6dfb\u52a0
+#删除
+editor.page.common.remove=\u5220\u9664
+#流水线设置
+editor.page.common.pipeline.setting=\u6d41\u6c34\u7ebf\u8bbe\u7f6e
 #编辑
 branchdetail.actionbutton.pipeline.edit=\u7f16\u8f91
+#代理
+editor.jenkins.agent=\u4ee3\u7406
+#环境变量
+editor.jenkins.environment=\u73af\u5883\u53d8\u91cf
+#变量名
+editor.jenkins.environment.name=\u53d8\u91cf\u540d
+#变量值
+editor.jenkins.environment.value=\u53d8\u91cf\u503c
+#子步骤
+editor.jenkins.pipeline.step.substep=\u5b50\u6b65\u9aa4
