Add Chinese localization pipline editor

--- a/blueocean-pipeline-editor/src/main/resources/jenkins/plugins/blueocean/pipeline/editor/Messages_zh.properties
+++ b/blueocean-pipeline-editor/src/main/resources/jenkins/plugins/blueocean/pipeline/editor/Messages_zh.properties
@@ -6,8 +6,26 @@ editor.page.common.save=\u4fdd\u5b58
 editor.page.common.add=\u6dfb\u52a0
 #删除
 editor.page.common.remove=\u5220\u9664
+#删除
+editor.page.common.delete=\u5220\u9664
+#设置
+editor.page.common.setting=\u8bbe\u7f6e
 #流水线设置
 editor.page.common.pipeline.setting=\u6d41\u6c34\u7ebf\u8bbe\u7f6e
+#步骤列表
+editor.page.common.pipeline.steps=\u6b65\u9aa4\u5217\u8868
+#添加步骤
+editor.page.common.pipeline.steps.add=\u6dfb\u52a0\u6b65\u9aa4
+#选择步骤类型
+editor.page.common.pipeline.steps.choose=\u9009\u62e9\u6b65\u9aa4\u7c7b\u578b
+#根据名称查找步骤
+editor.page.common.pipeline.steps.findby.name=\u6839\u636e\u540d\u79f0\u67e5\u627e\u6b65\u9aa4
+#没有定义子步骤
+editor.page.common.pipeline.steps.child.require=\u6ca1\u6709\u5b9a\u4e49\u5b50\u6b65\u9aa4
+#没有任何步骤，至少需要一个。
+editor.page.common.pipeline.steps.required=\u6ca1\u6709\u4efb\u4f55\u6b65\u9aa4\uff0c\u81f3\u5c11\u9700\u8981\u4e00\u4e2a\u3002
+#请输入阶段名称
+editor.page.common.pipeline.stages.input=\u8bf7\u8f93\u5165\u9636\u6bb5\u540d\u79f0
 #编辑
 branchdetail.actionbutton.pipeline.edit=\u7f16\u8f91
 #代理
