add missing tooltip to the configure icon on the pipeline and rundetails screens

--- a/blueocean-web/src/main/resources/jenkins/plugins/blueocean/web/Messages.properties
+++ b/blueocean-web/src/main/resources/jenkins/plugins/blueocean/web/Messages.properties
@@ -15,6 +15,7 @@ toast.run.started=Started "{0}" #{1}
 toast.run.stopping=Stopping "{0}" #{1}...
 toast.stopping=Stopping...
 toast.stop=Stop
+toast.configure=Configure
 Connection.lost.message=Connection lost
 Connection.lost.activity=waiting
 Connection.ok.message=Connection ok
