--- a/docu/I18N.md
+++ b/docu/I18N.md
@@ -52,7 +52,7 @@ If we want to follow the example of above page and create a new translation for 
  Messages_en_US_SiliconValley.properties
  ```
 
-However best practise is to create first the "common" languange and then the country specific one.
+However best practise is to create first the "common" language and then the country specific one.
 
 ```
  Messages_en_au.properties
