--- a/docu/I18N.md
+++ b/docu/I18N.md
@@ -94,7 +94,7 @@ with properties:
 toast.run.stopping=Stopping "{0}" #{1}...
 ```
 
-If you do not care about java you can use as well named parmeters ```#~name~#```.
+If you do not care about java you can use as well named parameters ```#~name~#```.
 
 ```javascript
 
