--- a/docu/I18N.md
+++ b/docu/I18N.md
@@ -22,7 +22,7 @@ g co JENKINS-35845
 g nb JENKINS-39225_fr
 ```
 
-Then create a locale version for your translatation. In our case we will create ```fr```
+Then create a locale version for your translation. In our case we will create ```fr```
 
 ```
 cp ./blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties ./blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages_fr.properties
