Squashed commit of the following:
commit c667b821aea881c0636d1bc9a63068825131108f
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Tue Feb 27 12:43:11 2018 +1000

    feature/JENKINS-38339-downstream-job-links-ui-2 * Clean up all the debug logging

commit e9142f40c4a4e6b15087b293f05771d97f466b33
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Tue Feb 27 12:25:06 2018 +1000

    feature/JENKINS-38339-downstream-job-links-ui-2 * Finally got the navigation problems squashed

commit b61077c7d6dc71d963503dbed3970cf11af129bd
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Thu Feb 22 15:02:47 2018 +1000

    feature/JENKINS-38339-downstream-job-links-ui-2 * Add a message prop for title, squash some more cleanup / documentation TODOs

commit b08b6f3ac66ebbff2a92cb9ff55cbed13fe66a72
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Thu Feb 22 09:23:22 2018 +1000

    feature/JENKINS-38339-downstream-job-links-ui-2 * Clean up some TODOs

commit 349c94d0366bfe7b114217128dc6590613b8b550
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Tue Feb 20 08:32:44 2018 +1000

    feature/JENKINS-38339-downstream-job-links-ui-2 * Fix a lint error in JDL

commit 283e12d9256e4b27a42777516adeb107873d6e3e
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Mon Feb 19 18:17:24 2018 +1000

    feature/JENKINS-38339-downstream-job-links-ui * Unit test for wrapping/coordinating component

commit d09267689e2cd1eb6c3e7648073d40a050be094e
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Fri Feb 16 16:11:28 2018 +1000

    feature/JENKINS-38339-downstream-job-links-ui * Clean up a bunch of stuff

commit 9ffde5fdcaf9a20e652daa28f5699d17135f01b4
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Fri Feb 16 12:53:48 2018 +1000

    feature/JENKINS-38339-downstream-job-links-ui * Working component in-container

commit 6b6abad7cb0b485847b646d2a887118a2fc18947
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Mon Feb 12 19:52:03 2018 +1000

    feature/JENKI

--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
@@ -220,6 +220,7 @@ rundetail.pipeline.waiting.message.description=Waiting for run to start
 rundetail.pipeline.pending.message.title=Loading
 rundetail.pipeline.pending.message.description=
 rundetail.pipeline.steps=Steps {0}
+rundetail.pipeline.downstream=Triggered Builds
 rundetail.tests.duration=Duration {0}
 rundetail.tests.failed=Failed {0}
 rundetail.tests.passed=Passed {0}
