[JENKINS-43892] Show passing tests

--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
@@ -234,6 +234,7 @@ rundetail.tests.results.error.stdout=Standard Output
 rundetail.tests.results.error.stderr=Standard Error
 rundetail.tests.results.errors.existing.count=Existing failures - {0}
 rundetail.tests.results.errors.new.count=New failing - {0}
+rundetail.tests.results.passed.count=Passed - {0}
 rundetail.tests.results.passing.all=All tests are passing
 rundetail.tests.results.passing.count=Nice one! All {0} tests for this pipeline are passing.
 rundetail.tests.results.skipped.count=Skipped - {0}
