feature/JENKINS-47247-https-roundtrip-3 * Still have a couple of loose ends in the editor, need to rebase

--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
@@ -38,7 +38,7 @@ creation.core.error.unexpected.try_again=An unknown error has occurred. You may 
 
 # create credential dialog
 creation.git.create_credential.button_close=Cancel
-creation.git.create_credential.button_create=Create credential
+creation.git.create_credential.button_create=Create Credential
 creation.git.create_credential.error_msg=An error occurred while creating the credential. You may try again.
 creation.git.create_credential.credential_type=Credential Type
 creation.git.create_credential.credential_type_ssh_key=SSH Key
@@ -50,6 +50,9 @@ creation.git.create_credential.sshkey_title=SSH Private Key
 creation.git.create_credential.username_error=Please enter a valid username
 creation.git.create_credential.username_title=Username
 creation.git.create_credential.title=Add credential
+creation.git.create_credential.pw_instructions=Jenkins needs a user credential to authorize itself with git.
+creation.git.create_credential.option_existing=Use existing credential: {0}
+creation.git.create_credential.option_create_new=Create new credential
 
 # creation for git
 creation.git.step1.create_button=Create Pipeline
@@ -60,7 +63,7 @@ creation.git.step1.credentials_error_invalid=Please select a valid credential.
 creation.git.step1.credentials_publickey_invalid=Unable to connect. Please make sure the Git server allows this SSH key.
 creation.git.step1.credentials_placeholder=System Default
 creation.git.step1.instructions=Any repository containing a Jenkinsfile will be built automatically. Not sure what we are talking about?
-creation.git.step1.instructions_link=Learn more about Jenkinsfile's.
+creation.git.step1.instructions_link=Learn more about Jenkinsfiles.
 creation.git.step1.repo_error_invalid=Please enter a valid URL.
 creation.git.step1.repo_error_required=Please enter a URL.
 creation.git.step1.repo_title=Repository URL
@@ -77,6 +80,7 @@ creation.git.step3.title_pipeline_create=Creating Pipeline...
 creation.git.credentials.register_ssh_key_instructions=You need to register this public SSH key with your Git server to continue - 
 creation.git.credentials.copy_to_clipboard=Copy to clipboard
 creation.git.credentials.connect_and_validate=Connect
+
 ## github enterprise add server dialog
 creation.githubent.add_server.button_cancel=Cancel
 creation.githubent.add_server.button_create=Add Server
