feature/JENKINS-47247-https-roundtrip-3 * Clean up some debugging, squash some TODOs

--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
@@ -53,6 +53,9 @@ creation.git.create_credential.title=Add credential
 creation.git.create_credential.pw_instructions=Jenkins needs a user credential to authorize itself with git.
 creation.git.create_credential.option_existing=Use existing credential: {0}
 creation.git.create_credential.option_create_new=Create new credential
+creation.git.create_credential.invalid_username_password=Invalid username and/or password
+creation.git.create_credential.revoked_credential=Existing username / password invalid. Please enter new credentials.
+creation.git.create_credential.unexpected_error=Git credential validation failed with unexpected error. Please try again.
 
 # creation for git
 creation.git.step1.create_button=Create Pipeline
