add next/prev links to run details screen

--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
@@ -210,6 +210,8 @@ rundetail.header.tab.artifacts=Artifacts
 rundetail.header.tab.changes=Changes
 rundetail.header.tab.pipeline=Pipeline
 rundetail.header.tab.tests=Tests
+rundetail.header.next_run=Next Run
+rundetail.header.prev_run=Previous Run
 rundetail.input.cancel=Abort
 rundetail.pipeline.description=Description
 rundetail.pipeline.logs=Logs
