Update Bitbucket authorize message

--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
@@ -129,7 +129,7 @@ creation.bitbucket.connect.invalid_username_password=Invalid username and/or pas
 creation.bitbucket.connect.revoked_credential=Existing username / password invalid. Please enter new credentials.
 creation.bitbucket.connect.unexpected_error=Bitbucket credential validation failed with unexpected error. Please try again
 creation.bitbucket.connect=Connect to Bitbucket
-creation.bitbucket.connect.authorize=Jenkins needs user credential to authorize itself with Bitbucket
+creation.bitbucket.connect.authorize=Jenkins needs user credentials to authorize itself with Bitbucket
 creation.bitbucket.pending.title=Creating Pipeline...
 
 ## BitBucket org list
