--- a/blueocean-pipeline-editor/src/main/resources/jenkins/plugins/blueocean/pipeline/editor/Messages.properties
+++ b/blueocean-pipeline-editor/src/main/resources/jenkins/plugins/blueocean/pipeline/editor/Messages.properties
@@ -12,6 +12,7 @@ editor.page.common.pipeline.steps.findby.name=Find steps by name
 editor.page.common.pipeline.steps.child.require=There are no child steps defined
 editor.page.common.pipeline.steps.required=There are no steps, at least one is required.
 editor.page.common.pipeline.stages.input=Name your stage
+editor.page.common.pipeline.nestedSequentialStagesError=The stage named '{0}' contains sequential parallel stages which are not currently supported by the Blue Ocean Pipeline Editor
 branchdetail.actionbutton.pipeline.edit=Edit
 editor.jenkins.agent=Agent
 editor.jenkins.environment=Environment
