[JENKINS-48643] add support for restartable stages

--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
@@ -253,6 +253,7 @@ rundetail.tests.results.summary.passing_after_fixes_message=Nice one! This run f
 rundetail.tests.results.summary.passing_after_fixes_title=All tests are passing
 rundetail.tests.results.summary.passing_message=Nice one! All {0} tests for this pipeline are passing.
 rundetail.tests.results.summary.passing_title=All tests are passing
+rundetail.logToolbar.restartStage=Restart {0}
 # server error display
 servererror.errors.code=Code: {0}
 servererror.errors.field=Field: {0}
