Move Favorites to Dashboard and remove ext points

--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages_de.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages_de.properties
@@ -79,3 +79,5 @@ rundetail.tests.results.passing.msg=Wie schaut es?
 rundetail.tests.results.skipped.count=\u00DCbersprungen - {0}
 rundetail.tests.results.skipped=\u00DCbersprungen
 Show.complete.logs=Ganzes Protokoll
+dashboardCard.input.required=Auf Input wartend
+dashboardCard.input.favorite=Favoriten
