--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages_es.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages_es.properties
@@ -79,3 +79,5 @@ rundetail.tests.results.passing.msg=C\u00f3mo va todo?
 rundetail.tests.results.skipped.count=Omitidos - {0}
 rundetail.tests.results.skipped=Omitido
 Show.complete.logs=Mostrar todo los logs
+dashboardCard.input.required=Esperando Input
+dashboardCard.input.favorite=Favoritos
