--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
@@ -265,3 +265,8 @@ inputStep.error.linktext=Resolve Input
 inputStep.error.message=This pipeline uses input types that are unsupported. Use Jenkins Classic to resolve this input step.
 inputStep.error.title=Error
 lozenge.commit={0} commits
+dashboardCard.input.required=Input Required
+dashboardCard.input.favorite=Favorites
+
+Favoriting.Error=Favoriting Error
+no.default.branch.to.favorite=No default branch (e.g. "master") to favorite
