--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages_zh.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages_zh.properties
@@ -309,3 +309,13 @@ Show.complete.logs=\u663e\u793a\u5b8c\u6574\u65e5\u5fd7
 inputStep.error.message=\u8fd9\u4e2a\u0050\u0069\u0070\u0065\u006c\u0069\u006e\u0065\u4e0d\u652f\u6301\u8fd9\u79cd\u8f93\u5165\u002e\u0020\u005c\u006e\u4f7f\u7528\u005b\u004a\u0065\u006e\u006b\u0069\u006e\u0073\u0020\u0043\u006c\u0061\u0073\u0073\u0069\u0063\u005d\u0028{0}\u0029\u0020\u53bb\u89e3\u51b3\u8fd9\u4e2a\u0069\u006e\u0070\u0075\u0074\u0020\u0073\u0074\u0065\u0070\u002e
 inputStep.error.title=\u9519\u8bef
 lozenge.commit={0} \u0063\u006f\u006d\u006d\u0069\u0074\u0073
+#输入所需
+dashboardCard.input.required=\u8f93\u5165\u6240\u9700
+
+#收藏
+dashboardCard.input.favorite=\u6536\u85cf
+
+#收藏失败
+Favoriting.Error=\u6536\u85cf\u5931\u8d25
+#缺少默认分支(比如:master)可选
+no.default.branch.to.favorite=\u7f3a\u5c11\u9ed8\u8ba4\u5206\u652f\u0028\u6bd4\u5982\u003a\u006d\u0061\u0073\u0074\u0065\u0072\u0029\u53ef\u9009
