replace unicode codes with the chars

--- a/blueocean-web/locales/de/blueocean-dashboard.json
+++ b/blueocean-web/locales/de/blueocean-dashboard.json
@@ -6,14 +6,14 @@
     "common.pager.more": "Mehr anzeigen",
     "enable": "Aktivieren",
     "home.header.button.createpipeline": "Neue Pipeline",
-    "home.header.dashboard": "\\u00dcbersicht",
+    "home.header.dashboard": "Übersicht",
     "home.pipelineslist.header.branches": "Branch",
     "home.pipelineslist.header.health": "Gesundheit",
     "home.pipelineslist.header.name": "Name",
     "home.pipelineslist.header.pullrequests": "Pull-Request",
     "home.pipelineslist.row.failing": "{0} fehlgeschlagen",
     "home.pipelineslist.row.passing": "{0} erfolgreich",
-    "Open.dashboard": "\\u00dcbersicht anzeigen",
+    "Open.dashboard": "Übersicht anzeigen",
     "pipelinedetail.activity.button.run": "Jetzt starten",
     "pipelinedetail.activity.header.branch": "Branch",
     "pipelinedetail.activity.header.run": "Build",
@@ -28,7 +28,7 @@
     "pipelinedetail.branches.header.health": "Gesundheit",
     "pipelinedetail.branches.header.message": "Letzte Nachricht",
     "pipelinedetail.branches.header.status": "Status",
-    "pipelinedetail.common.tab.activity": "Aktivit\\u00E4ten",
+    "pipelinedetail.common.tab.activity": "Aktivitäten",
     "pipelinedetail.common.tab.branches": "Branches",
     "pipelinedetail.common.tab.pullrequests": "Pull-Request",
     "pipelinedetail.pullrequests.header.author": "Autor",
@@ -37,20 +37,20 @@
     "pipelinedetail.pullrequests.header.status": "Status",
     "pipelinedetail.pullrequests.header.summary": "Zusammenfassung",
     "rundetail.artifacts.button.download": "Artefakt herunterladen",
-    "rundetail.artifacts.button.open": "Artefakt \\u00f6ffnen",
+    "rundetail.artifacts.button.open": "Artefakt öffnen",
     "rundetail.artifacts.header.name": "Name",
-    "rundetail.artifacts.header.size": "Gr\\u00F6sse",
+    "rundetail.artifacts.header.size": "Grösse",
     "rundetail.changes.header.author": "Autor",
     "rundetail.changes.header.commit": "Commit",
     "rundetail.changes.header.date": "Datum",
     "rundetail.changes.header.message": "Nachricht",
     "rundetail.header.branch": "Branch",
-    "rundetail.header.changes.count": "{0} \\u00E4nderungen",
-    "rundetail.header.changes.names": "\\u00C4nderungen von {0}",
-    "rundetail.header.changes.none": "Keine \\u00C4nderungen",
+    "rundetail.header.changes.count": "{0} änderungen",
+    "rundetail.header.changes.names": "Änderungen von {0}",
+    "rundetail.header.changes.none": "Keine Änderungen",
     "rundetail.header.commit": "Commit",
     "rundetail.header.tab.artifacts": "Artefakte",
-    "rundetail.header.tab.changes": "\\u00C4nderungen",
+    "rundetail.header.tab.changes": "Änderungen",
     "rundetail.header.tab.pipeline": "Pipeline",
     "rundetail.header.tab.tests": "Tests",
     "rundetail.input.cancel": "Abbrechen",
@@ -71,8 +71,8 @@
     "rundetail.tests.results.passing.count": "Sehr gut! Alle {0} Tests waren erfolgreich.",
     "rundetail.tests.results.passing": "Erfolgreich",
     "rundetail.tests.results.passing.msg": "Wie schaut es?",
-    "rundetail.tests.results.skipped.count": "\\u00DCbersprungen - {0}",
-    "rundetail.tests.results.skipped": "\\u00DCbersprungen",
+    "rundetail.tests.results.skipped.count": "Übersprungen - {0}",
+    "rundetail.tests.results.skipped": "Übersprungen",
     "Show.complete.logs": "Ganzes Protokoll",
     "dashboardCard.input.required": "Auf Input wartend",
     "dashboardCard.input.favorite": "Favoriten"
