--- a/blueocean-web/locales/es/blueocean-dashboard.json
+++ b/blueocean-web/locales/es/blueocean-dashboard.json
@@ -1,17 +1,17 @@
 { "translation": {
-    "common.date.duration.hint.format": "M [Meses], d [D\\u00EDas], h[h.], m[m], s[s]",
+    "common.date.duration.hint.format": "M [Meses], d [Días], h[h.], m[m], s[s]",
     "common.date.readable.long": "MMM DD YYYY h:mma Z",
     "common.date.readable.short": "MMM DD h:mma Z",
     "common.pager.loading": "Cargando...",
-    "common.pager.more": "Ver m\\u00e1s",
+    "common.pager.more": "Ver más",
     "enable": "Activar",
     "home.header.button.createpipeline": "Nuevo Pipeline",
     "home.header.dashboard": "Cuadro de mando",
     "home.pipelineslist.header.branches": "Ramas",
     "home.pipelineslist.header.health": "Salud",
     "home.pipelineslist.header.name": "Nombre",
-    "home.pipelineslist.header.pullrequests": "Petici\\u00F3n de cambio",
-    "home.pipelineslist.row.failing": "{0} err\\u00f3neo",
+    "home.pipelineslist.header.pullrequests": "Petición de cambio",
+    "home.pipelineslist.row.failing": "{0} erróneo",
     "home.pipelineslist.row.passing": "{0} exitoso",
     "Open.dashboard": "Abrir el cuadro de mando",
     "pipelinedetail.activity.button.run": "Ejecutar ahora",
@@ -19,18 +19,18 @@
     "pipelinedetail.activity.header.run": "Build",
     "pipelinedetail.activity.header.commit": "Commit",
     "pipelinedetail.activity.header.completed": "Finalizado",
-    "pipelinedetail.activity.header.duration": "Duraci\\u00F3n",
+    "pipelinedetail.activity.header.duration": "Duración",
     "pipelinedetail.activity.header.message": "Mensaje",
     "pipelinedetail.activity.header.status": "Estado",
     "pipelinedetail.branches.header.branch": "Rama",
     "pipelinedetail.branches.header.commit": "Commit",
     "pipelinedetail.branches.header.completed": "Finalizado",
     "pipelinedetail.branches.header.health": "Salud",
-    "pipelinedetail.branches.header.message": "\\u00daltimo mensaje",
+    "pipelinedetail.branches.header.message": "Último mensaje",
     "pipelinedetail.branches.header.status": "Estado",
     "pipelinedetail.common.tab.activity": "Actividad",
     "pipelinedetail.common.tab.branches": "Ramas",
-    "pipelinedetail.common.tab.pullrequests": "Petici\\u00F3n de cambio",
+    "pipelinedetail.common.tab.pullrequests": "Petición de cambio",
     "pipelinedetail.pullrequests.header.author": "Autor",
     "pipelinedetail.pullrequests.header.run": "PR",
     "pipelinedetail.pullrequests.header.completed": "Finalizado",
@@ -39,7 +39,7 @@
     "rundetail.artifacts.button.download": "Descargar el artefacto",
     "rundetail.artifacts.button.open": "Abrir el artefacto",
     "rundetail.artifacts.header.name": "Nombre",
-    "rundetail.artifacts.header.size": "Tama\\u00F1o",
+    "rundetail.artifacts.header.size": "Tamaño",
     "rundetail.changes.header.author": "Autor",
     "rundetail.changes.header.commit": "Commit",
     "rundetail.changes.header.date": "Fecha",
@@ -50,14 +50,14 @@
     "rundetail.header.changes.none": "No hay modificaciones",
     "rundetail.header.commit": "Commit",
     "rundetail.header.tab.artifacts": "Artefacto",
-    "rundetail.header.tab.changes": "Modificac\\u00EDon",
+    "rundetail.header.tab.changes": "Modificacíon",
     "rundetail.header.tab.pipeline": "Pipeline",
     "rundetail.header.tab.tests": "Pruebas",
     "rundetail.input.cancel": "Cancelar",
     "rundetail.pipeline.logs": "Logs",
     "rundetail.pipeline.nosteps": "No hay pasos definidos.",
     "rundetail.pipeline.steps": "Pasos {0}",
-    "rundetail.tests.duration": "Duraci\\u00F3n {0}",
+    "rundetail.tests.duration": "Duración {0}",
     "rundetail.tests.failed": "Errores {0}",
     "rundetail.tests.passed": "Exitosos {0}",
     "rundetail.tests.results.error.message": "Error",
@@ -70,7 +70,7 @@
     "rundetail.tests.results.passing.all": "Muy bien! La prueba fue ejecutada correctamente.",
     "rundetail.tests.results.passing.count": "Muy bien! Todas las pruebas ({0}) fueron ejecutadas correctamente.",
     "rundetail.tests.results.passing": "Exitoso",
-    "rundetail.tests.results.passing.msg": "C\\u00f3mo va todo?",
+    "rundetail.tests.results.passing.msg": "Cómo va todo?",
     "rundetail.tests.results.skipped.count": "Omitidos - {0}",
     "rundetail.tests.results.skipped": "Omitido",
     "Show.complete.logs": "Mostrar todo los logs",
