--- a/blueocean-web/locales/fr/blueocean-dashboard.json
+++ b/blueocean-web/locales/fr/blueocean-dashboard.json
@@ -8,41 +8,41 @@
     "home.header.button.createpipeline": "Nouveau Pipeline",
     "home.header.dashboard": "Tableau de bord",
     "home.pipelineslist.header.branches": "Branches",
-    "home.pipelineslist.header.health": "Sant\\u00e9",
+    "home.pipelineslist.header.health": "Santé",
     "home.pipelineslist.header.name": "Nom",
     "home.pipelineslist.header.pullrequests": "Pull requests",
-    "home.pipelineslist.row.failing": "{0} en \\u00e9chec",
-    "home.pipelineslist.row.passing": "{0} avec succ\\u00e8s",
+    "home.pipelineslist.row.failing": "{0} en échec",
+    "home.pipelineslist.row.passing": "{0} avec succès",
     "Open.dashboard": "Ouvrir le tableau de bord",
     "pipelinedetail.activity.button.run": "Lancer maintenant",
     "pipelinedetail.activity.header.branch": "Branche",
     "pipelinedetail.activity.header.build": "Construction",
     "pipelinedetail.activity.header.commit": "Commit",
-    "pipelinedetail.activity.header.completed": "Termin\\u00e9",
-    "pipelinedetail.activity.header.duration": "Dur\\u00e9e",
+    "pipelinedetail.activity.header.completed": "Terminé",
+    "pipelinedetail.activity.header.duration": "Durée",
     "pipelinedetail.activity.header.message": "Message",
-    "pipelinedetail.activity.header.status": "\\u00c9tat",
+    "pipelinedetail.activity.header.status": "État",
     "pipelinedetail.branches.header.branch": "Branche",
     "pipelinedetail.branches.header.commit": "Commit",
-    "pipelinedetail.branches.header.completed": "Termin\\u00e9",
-    "pipelinedetail.branches.header.health": "Sant\\u00e9",
+    "pipelinedetail.branches.header.completed": "Terminé",
+    "pipelinedetail.branches.header.health": "Santé",
     "pipelinedetail.branches.header.message": "Dernier message",
-    "pipelinedetail.branches.header.status": "\\u00c9tat",
-    "pipelinedetail.common.tab.activity": "Activit\\u00e9",
+    "pipelinedetail.branches.header.status": "État",
+    "pipelinedetail.common.tab.activity": "Activité",
     "pipelinedetail.common.tab.branches": "Branches",
     "pipelinedetail.common.tab.pullrequests": "Pull requests",
     "pipelinedetail.pullrequests.header.author": "Auteur",
     "pipelinedetail.pullrequests.header.build": "PR",
-    "pipelinedetail.pullrequests.header.completed": "Termin\\u00e9",
-    "pipelinedetail.pullrequests.header.status": "\\u00c9tat",
-    "pipelinedetail.pullrequests.header.summary": "R\\u00e9sum\\u00e9",
-    "rundetail.artifacts.button.download": "T\\u00e9l\\u00e9charger l'artefact",
+    "pipelinedetail.pullrequests.header.completed": "Terminé",
+    "pipelinedetail.pullrequests.header.status": "État",
+    "pipelinedetail.pullrequests.header.summary": "Résumé",
+    "rundetail.artifacts.button.download": "Télécharger l'artefact",
     "rundetail.artifacts.button.open": "Ouvrir l'artefact",
-    "rundetail.artifacts.button.downloadAll.text": "Tout t\\u00e9l\\u00e9charger",
-    "rundetail.artifacts.button.downloadAll.title": "T\\u00e9l\\u00e9charger tous les artefacts comme zip",
+    "rundetail.artifacts.button.downloadAll.text": "Tout télécharger",
+    "rundetail.artifacts.button.downloadAll.title": "Télécharger tous les artefacts comme zip",
     "rundetail.artifacts.header.name": "Nom",
     "rundetail.artifacts.header.size": "Taille",
-    "rundetail.artifacts.limit": "Seuls les 100 premiers artefacts sont affich\\u00e9s",
+    "rundetail.artifacts.limit": "Seuls les 100 premiers artefacts sont affichés",
     "rundetail.changes.header.author": "Auteur",
     "rundetail.changes.header.commit": "Commit",
     "rundetail.changes.header.date": "Date",
@@ -58,24 +58,24 @@
     "rundetail.header.tab.tests": "Tests",
     "rundetail.input.cancel": "Annuler",
     "rundetail.pipeline.logs": "Logs",
-    "rundetail.pipeline.nosteps": "Il n'y a aucune \\u00e9tape.",
-    "rundetail.pipeline.steps": "\\u00c9tapes {0}",
-    "rundetail.tests.duration": "Dur\\u00e9e {0}",
-    "rundetail.tests.failed": "\\u00c9chou\\u00e9s {0}",
-    "rundetail.tests.passed": "Pass\\u00e9s {0}",
+    "rundetail.pipeline.nosteps": "Il n'y a aucune étape.",
+    "rundetail.pipeline.steps": "Étapes {0}",
+    "rundetail.tests.duration": "Durée {0}",
+    "rundetail.tests.failed": "Échoués {0}",
+    "rundetail.tests.passed": "Passés {0}",
     "rundetail.tests.results.error.message": "Erreur",
     "rundetail.tests.results.error.output": "Trace d'appels",
-    "rundetail.tests.results.errors.existing.count": "\\u00c9checs pr\\u00e9existant - {0}",
-    "rundetail.tests.results.errors.new.count": "Nouveaux \\u00e9checs - {0}",
-    "rundetail.tests.results.failures": "\\u00c9checs",
-    "rundetail.tests.results.failures.new": "Nouveaux \\u00e9checs",
-    "rundetail.tests.results.fixed": "Corrig\\u00e9s",
-    "rundetail.tests.results.passing.all": "Tous les tests sont pass\\u00e9s avec succ\\u00e8s.",
-    "rundetail.tests.results.passing.count": "Bien jou\\u00e9! Tous les {0} tests sont pass\\u00e9s avec succ\\u00e8s.",
-    "rundetail.tests.results.passing.msg": "Comment est la s\\u00e9r\\u00e9nit\\u00e9?",
-    "rundetail.tests.results.passing": "Pass\\u00e9s avec succ\\u00e8s",
-    "rundetail.tests.results.skipped.count": "Saut\\u00e9s - {0}",
-    "rundetail.tests.results.skipped": "Saut\\u00e9s",
+    "rundetail.tests.results.errors.existing.count": "Échecs préexistant - {0}",
+    "rundetail.tests.results.errors.new.count": "Nouveaux échecs - {0}",
+    "rundetail.tests.results.failures": "Échecs",
+    "rundetail.tests.results.failures.new": "Nouveaux échecs",
+    "rundetail.tests.results.fixed": "Corrigés",
+    "rundetail.tests.results.passing.all": "Tous les tests sont passés avec succès.",
+    "rundetail.tests.results.passing.count": "Bien joué! Tous les {0} tests sont passés avec succès.",
+    "rundetail.tests.results.passing.msg": "Comment est la sérénité?",
+    "rundetail.tests.results.passing": "Passés avec succès",
+    "rundetail.tests.results.skipped.count": "Sautés - {0}",
+    "rundetail.tests.results.skipped": "Sautés",
     "Show.complete.logs": "Afficher tout le log"
   }
 }
