--- a/blueocean-web/locales/fr/blueocean-web.json
+++ b/blueocean-web/locales/fr/blueocean-web.json
@@ -1,19 +1,19 @@
 { "translation": {
     "administration": "Administration",
     "login": "Connexion",
-    "logout": "D\\u00e9connexion",
-    "Not.found.heading": "Page non trouv\\u00e9e (404)",
-    "Not.found.message": "Jenkins n'a pas pu trouver la page que vous recherchiez. V\\u00e9rifiez l'URL pour des erreurs ou appuyez sur le bouton de retour.",
+    "logout": "Déconnexion",
+    "Not.found.heading": "Page non trouvée (404)",
+    "Not.found.message": "Jenkins n'a pas pu trouver la page que vous recherchiez. Vérifiez l'URL pour des erreurs ou appuyez sur le bouton de retour.",
     "parametrised.pipeline.cancel": "Annuler",
-    "parametrised.pipeline.header": "Param\\u00e8tre(s) indispensable",
-    "parametrised.pipeline.submit": "D\\u00e9marrer",
+    "parametrised.pipeline.header": "Paramètre(s) indispensable",
+    "parametrised.pipeline.submit": "Démarrer",
     "pipelines": "Pipelines",
     "toast.abort": "Interrompre",
     "toast.run.open": "Ouvrir",
     "toast.run": "Lancer",
-    "toast.run.started": "D\\u00e9marr\\u00e9 \"{0}\" #{1}",
-    "toast.run.stopping": "Arr\\u00eat de \"{0}\" #{1} en cours...",
-    "toast.stopping": "Arr\\u00eat en cours...",
-    "toast.stop": "Arr\\u00eater"
+    "toast.run.started": "Démarré \"{0}\" #{1}",
+    "toast.run.stopping": "Arrêt de \"{0}\" #{1} en cours...",
+    "toast.stopping": "Arrêt en cours...",
+    "toast.stop": "Arrêter"
   }
 }
