--- a/blueocean-web/locales/zh/blueocean-pipeline-editor.json
+++ b/blueocean-web/locales/zh/blueocean-pipeline-editor.json
@@ -1,23 +1,23 @@
 { "translation": {
-    "editor.page.common.cancel": "\\u53d6\\u6d88",
-    "editor.page.common.save": "\\u4fdd\\u5b58",
-    "editor.page.common.add": "\\u6dfb\\u52a0",
-    "editor.page.common.remove": "\\u5220\\u9664",
-    "editor.page.common.delete": "\\u5220\\u9664",
-    "editor.page.common.setting": "\\u8bbe\\u7f6e",
-    "editor.page.common.pipeline.setting": "\\u6d41\\u6c34\\u7ebf\\u8bbe\\u7f6e",
-    "editor.page.common.pipeline.steps": "\\u6b65\\u9aa4\\u5217\\u8868",
-    "editor.page.common.pipeline.steps.add": "\\u6dfb\\u52a0\\u6b65\\u9aa4",
-    "editor.page.common.pipeline.steps.choose": "\\u9009\\u62e9\\u6b65\\u9aa4\\u7c7b\\u578b",
-    "editor.page.common.pipeline.steps.findby.name": "\\u6839\\u636e\\u540d\\u79f0\\u67e5\\u627e\\u6b65\\u9aa4",
-    "editor.page.common.pipeline.steps.child.require": "\\u6ca1\\u6709\\u5b9a\\u4e49\\u5b50\\u6b65\\u9aa4",
-    "editor.page.common.pipeline.steps.required": "\\u6ca1\\u6709\\u4efb\\u4f55\\u6b65\\u9aa4\\uff0c\\u81f3\\u5c11\\u9700\\u8981\\u4e00\\u4e2a\\u3002",
-    "editor.page.common.pipeline.stages.input": "\\u8bf7\\u8f93\\u5165\\u9636\\u6bb5\\u540d\\u79f0",
-    "branchdetail.actionbutton.pipeline.edit": "\\u7f16\\u8f91",
-    "editor.jenkins.agent": "\\u4ee3\\u7406",
-    "editor.jenkins.environment": "\\u73af\\u5883\\u53d8\\u91cf",
-    "editor.jenkins.environment.name": "\\u53d8\\u91cf\\u540d",
-    "editor.jenkins.environment.value": "\\u53d8\\u91cf\\u503c",
-    "editor.jenkins.pipeline.step.substep": "\\u5b50\\u6b65\\u9aa4"
+    "editor.page.common.cancel": "取消",
+    "editor.page.common.save": "保存",
+    "editor.page.common.add": "添加",
+    "editor.page.common.remove": "删除",
+    "editor.page.common.delete": "删除",
+    "editor.page.common.setting": "设置",
+    "editor.page.common.pipeline.setting": "流水线设置",
+    "editor.page.common.pipeline.steps": "步骤列表",
+    "editor.page.common.pipeline.steps.add": "添加步骤",
+    "editor.page.common.pipeline.steps.choose": "选择步骤类型",
+    "editor.page.common.pipeline.steps.findby.name": "根据名称查找步骤",
+    "editor.page.common.pipeline.steps.child.require": "没有定义子步骤",
+    "editor.page.common.pipeline.steps.required": "没有任何步骤，至少需要一个。",
+    "editor.page.common.pipeline.stages.input": "请输入阶段名称",
+    "branchdetail.actionbutton.pipeline.edit": "编辑",
+    "editor.jenkins.agent": "代理",
+    "editor.jenkins.environment": "环境变量",
+    "editor.jenkins.environment.name": "变量名",
+    "editor.jenkins.environment.value": "变量值",
+    "editor.jenkins.pipeline.step.substep": "子步骤"
   }
 }
