Use the same word with Jenkins core

--- a/blueocean-web/src/main/resources/jenkins/plugins/blueocean/web/Messages_zh.properties
+++ b/blueocean-web/src/main/resources/jenkins/plugins/blueocean/web/Messages_zh.properties
@@ -3,7 +3,7 @@ administration=\u914D\u7F6E\u7BA1\u7406
 #\u767B\u5F55
 login=\u767B\u5F55
 #\u767B\u51FA
-logout=\u767B\u51FA
+logout=\u6CE8\u9500
 Not.found.heading=\u627E\u4E0D\u5230\u9875\u9762(404)
 #Jenkins\u627E\u4E0D\u5230\u5BF9\u5E94\u9875\u9762. \u68C0\u67E5URL\u662F\u5426\u9519\u8BEF\u6216\u8005\u8FD4\u56DE.
 Not.found.message=Jenkins \u627E\u4E0D\u5230\u5BF9\u5E94\u9875\u9762\u3002\u68C0\u67E5 URL \u662F\u5426\u9519\u8BEF\u6216\u8005\u8FD4\u56DE\u3002
