--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages_zh.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages_zh.properties
@@ -110,12 +110,12 @@ creation.githubent.add_server.text_name_placeholder=\u6211\u7684 GitHub \u670D\u
 creation.githubent.add_server.text_name_title=\u670D\u52A1\u540D
 #URL\u5DF2\u7ECF\u88AB\u5176\u4ED6\u670D\u52A1\u4F7F\u7528
 creation.githubent.add_server.text_url_error_duplicate=URL \u5DF2\u7ECF\u88AB\u5176\u4ED6\u670D\u52A1\u4F7F\u7528
-creation.githubent.add_server.text_url_error_invalid=\u65E0\u6CD5\u8FDE\u63A5\u5230\u53EF\u7528\u7684 Github \u670D\u52A1\u5668
+creation.githubent.add_server.text_url_error_invalid=\u65E0\u6CD5\u8FDE\u63A5\u5230\u53EF\u7528\u7684 GitHub \u670D\u52A1\u5668
 #\u8BF7\u8F93\u5165\u6709\u6548\u7684URL.
 creation.githubent.add_server.text_url_error_required=\u8BF7\u8F93\u5165\u6709\u6548\u7684 URL
 creation.githubent.add_server.text_url_placeholder=https://github.example.com
 creation.githubent.add_server.text_url_title=\u670D\u52A1\u5730\u5740
-creation.githubent.add_server.title=\u6DFB\u52A0 Github \u670D\u52A1\u5668
+creation.githubent.add_server.title=\u6DFB\u52A0 GitHub \u670D\u52A1\u5668
 ## github enterprise \u521B\u5EFA\u6D41\u7A0B
 #\u6DFB\u52A0
 creation.githubent.choose_server.button_add=\u6DFB\u52A0
