--- a/blueocean-web/src/main/resources/jenkins/plugins/blueocean/web/Messages.properties
+++ b/blueocean-web/src/main/resources/jenkins/plugins/blueocean/web/Messages.properties
@@ -29,6 +29,7 @@ common.state.queued = Running for {0}
 common.state.success = Passed in {0}
 common.state.unstable = Passed in {0} but marked as unstable.
 common.state.failure = Failed in {0}
+common.state.skipped = Skipped
 common.state.not_built = Not built
 common.state.unknown = Unknown
 # the parameterMessage keys assume that you will parse them with a markdown parser
