--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
@@ -159,6 +159,9 @@ pipelinedetail.activity.header.completed=Completed
 pipelinedetail.activity.header.duration=Duration
 pipelinedetail.activity.header.message=Message
 pipelinedetail.activity.header.status=Status
+pipelinedetail.activity.header.disabled.pipeline=This Pipeline is currently disabled
+pipelinedetail.activity.header.disable.job=Disable Job
+pipelinedetail.activity.header.enable.job=Enable Job
 pipelinedetail.branches.header.branch=Branch
 pipelinedetail.branches.header.commit=Commit
 pipelinedetail.branches.header.completed=Completed
