--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
@@ -160,8 +160,8 @@ pipelinedetail.activity.header.duration=Duration
 pipelinedetail.activity.header.message=Message
 pipelinedetail.activity.header.status=Status
 pipelinedetail.activity.header.disabled.pipeline=This Pipeline is currently disabled
-pipelinedetail.activity.header.disable.job=Disable Job
-pipelinedetail.activity.header.enable.job=Enable Job
+pipelinedetail.activity.header.disable.job=Disable
+pipelinedetail.activity.header.enable.job=Enable
 pipelinedetail.branches.header.branch=Branch
 pipelinedetail.branches.header.commit=Commit
 pipelinedetail.branches.header.completed=Completed
