--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
@@ -136,6 +136,23 @@ creation.bitbucket.pending.title=Creating Pipeline...
 creation.bbcloud.repository.title=Which team does the repository belong to?
 creation.bbserver.repository.title=Which project does the repository belong to?
 
+## Creation for Perforce
+creation.p4.step1.credentials_placeholder=System Default
+creation.p4.step1.repo_error_invalid=Please enter a valid URL.
+creation.p4.step1.repo_error_required=Please enter a URL.
+creation.p4.step1.create_button=Create Pipeline
+creation.p4.step1.create_button_progress=Creating Pipeline...
+creation.p4.step1.title=Connect to a Perforce server
+creation.p4.step1.instructions=Depot path containing a Jenkinsfile will be built automatically. Not sure what we are talking about?
+creation.p4.step1.repo_title=View Mappings (Location of Jenkinsfile)
+creation.p4.step3.title_completed=Completed
+creation.p4.create_credential.invalid_username_password=Invalid username and/or password
+creation.p4.create_credential.revoked_credential=Existing username / password invalid. Please enter new credentials.
+creation.p4.create_credential.unexpected_error=Perforce credential validation failed with unexpected error. Please try again.
+
+
+
+
 enable=Enable
 # home page / dashboard
 home.header.button.createpipeline=New Pipeline
