First cut of basic working code

--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
@@ -138,14 +138,12 @@ creation.bbserver.repository.title=Which project does the repository belong to?
 
 ## Creation for Perforce
 creation.p4.step1.credentials_placeholder=System Default
-creation.p4.step1.repo_error_invalid=Please enter a valid URL.
-creation.p4.step1.repo_error_required=Please enter a URL.
 creation.p4.step1.create_button=Create Pipeline
 creation.p4.step1.create_button_progress=Creating Pipeline...
-creation.p4.step1.title=Connect to a Perforce server
-creation.p4.step1.instructions=Depot path containing a Jenkinsfile will be built automatically. Not sure what we are talking about?
-creation.p4.step1.repo_title=View Mappings (Location of Jenkinsfile)
-creation.p4.step3.title_completed=Completed
+creation.p4.step1.title=Select Perforce credentials
+creation.p4.button_next=Next
+creation.p4.step1.instructions=Jenkins needs credentials to connect to Perforce.
+creation.p4.project_step.title=Which project do you want to build?
 creation.p4.create_credential.invalid_username_password=Invalid username and/or password
 creation.p4.create_credential.revoked_credential=Existing username / password invalid. Please enter new credentials.
 creation.p4.create_credential.unexpected_error=Perforce credential validation failed with unexpected error. Please try again.
