--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
@@ -143,6 +143,7 @@ home.header.dashboard=Pipelines
 home.pipelineslist.header.branches=Branches
 home.pipelineslist.header.health=Health
 home.pipelineslist.header.name=Name
+home.pipelineslist.header.tags=TAG
 home.pipelineslist.header.pullrequests=PR
 home.pipelineslist.row.failing={0} failing
 home.pipelineslist.row.passing={0} passing
@@ -170,11 +171,13 @@ pipelinedetail.branches.header.message=Latest message
 pipelinedetail.branches.header.status=Status
 pipelinedetail.common.tab.activity=Activity
 pipelinedetail.common.tab.branches=Branches
+pipelinedetail.common.tab.tags=Tags
 pipelinedetail.common.tab.pullrequests=Pull Requests
 pipelinedetail.placeholder.nobranches.linkhref=https://jenkins.io/doc/
 pipelinedetail.placeholder.nobranches.linktext=Learn more
 pipelinedetail.placeholder.nobranches.message=A Jenkinsfile is defined in your repository and describes how your pipeline will work.
 pipelinedetail.placeholder.nobranches.title=You don't have any branches that contain a Jenkinsfile
+pipelinedetail.placeholder.notags.title=You don't have any tags
 pipelinedetail.placeholder.nopullrequests.title=You don't have any open pull requests
 pipelinedetail.placeholder.noruns.multibranch.branches_title=This Pipeline hasn't run yet. Why not run one of the branches?
 pipelinedetail.placeholder.noruns.multibranch.branches_linktext=Show branches
@@ -184,6 +187,15 @@ pipelinedetail.placeholder.unsupported.branches.linkhref=https://jenkins.io/doc/
 pipelinedetail.placeholder.unsupported.branches.linktext=Learn more
 pipelinedetail.placeholder.unsupported.branches.message=Branch runs only work with the Multibranch Pipeline job type.
 pipelinedetail.placeholder.unsupported.branches.title=Branches are unsupported
+pipelinedetail.placeholder.unsupported.tags.linkhref=https://jenkins.io/doc/pipeline/tour/running-multiple-steps/
+pipelinedetail.placeholder.unsupported.tags.linktext=Learn more
+pipelinedetail.placeholder.unsupported.tags.message=Tags runs only work with the Multibranch Pipeline job type.
+pipelinedetail.placeholder.unsupported.tags.title=Tags are unsupported
+pipelinedetail.tags.header.author=Author
+pipelinedetail.tags.header.run=TAG
+pipelinedetail.tags.header.completed=Completed
+pipelinedetail.tags.header.status=Status
+pipelinedetail.tags.header.summary=Summary
 pipelinedetail.placeholder.unsupported.pullrequests.linkhref=https://jenkins.io/doc/pipeline/tour/running-multiple-steps/
 pipelinedetail.placeholder.unsupported.pullrequests.linktext=Learn more
 pipelinedetail.placeholder.unsupported.pullrequests.message=Pull request runs only work with the Multibranch Pipeline job type.
