Pipeline creation completed. TODO Pipeline rename flow.

--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
@@ -137,17 +137,18 @@ creation.bbcloud.repository.title=Which team does the repository belong to?
 creation.bbserver.repository.title=Which project does the repository belong to?
 
 ## Creation for Perforce
-creation.p4.step1.credentials_placeholder=System Default
-creation.p4.step1.create_button=Create Pipeline
-creation.p4.step1.create_button_progress=Creating Pipeline...
 creation.p4.step1.title=Select Perforce credentials
 creation.p4.button_next=Next
 creation.p4.step1.instructions=Jenkins needs credentials to connect to Perforce.
 creation.p4.project_step.title=Which project do you want to build?
-creation.p4.create_credential.invalid_username_password=Invalid username and/or password
-creation.p4.create_credential.revoked_credential=Existing username / password invalid. Please enter new credentials.
-creation.p4.create_credential.unexpected_error=Perforce credential validation failed with unexpected error. Please try again.
-
+creation.p4.pending.title=Creating Pipeline...
+## Pipeline rename labels for Perforce
+creation.p4.step2.button_save=Save
+creation.p4.step2.name_available=Success! '{0}' is available.
+creation.p4.step2.name_required='{0}' is unavailable. A unique name is required.
+creation.p4.step2.name_unavailable=The name '{0}' is not available. Please try a different name.
+creation.p4.step2.text_name_placeholder=Pipeline name
+creation.p4.step2.title=Naming conflict
 
 
 
