Changed the Jenkinsfile related text.

--- a/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
+++ b/blueocean-dashboard/src/main/resources/jenkins/plugins/blueocean/dashboard/Messages.properties
@@ -141,7 +141,7 @@ creation.p4.step1.title=Select Perforce credentials
 creation.p4.button_next=Next
 creation.p4.step1.instructions=Jenkins needs credentials to connect to Perforce.
 creation.p4.project_step.title=Which project do you want to build?
-creation.p4.project_step.subtitle=Make sure the project has Jenkinsfile.
+creation.p4.project_step.subtitle=Make sure the project has a Jenkinsfile per branch.
 creation.p4.pending.title=Creating Pipeline...
 ## Pipeline rename labels for Perforce
 creation.p4.step2.button_save=Save
