Stronger phrasing for Blue Ocean purpose

--- a/blueocean/doc/BlueOcean.adoc
+++ b/blueocean/doc/BlueOcean.adoc
@@ -1,6 +1,6 @@
 == What is Blue Ocean?
 
-Blue Ocean is a new project that rethinks the user experience of Jenkins.
+Blue Ocean rethinks the Jenkins user experience.
 Designed from the ground up for Jenkins Pipeline and compatible with Freestyle jobs, Blue Ocean reduces clutter and increases clarity for every member of your team through the following key features:
 
 * *Sophisticated visualizations of CD pipelines* for fast and intuitive comprehension of software pipeline status.
