[JENKINS-45524] Report unsupported parameter types

--- a/blueocean-web/src/main/resources/jenkins/plugins/blueocean/web/Messages.properties
+++ b/blueocean-web/src/main/resources/jenkins/plugins/blueocean/web/Messages.properties
@@ -37,6 +37,8 @@ parameter.error.message=The "{0}" input type is not yet supported.
 parameter.error.title=Error
 # the parameterMessage keys assume that you will parse them with a markdown parser
 inputParameter.error.linktext=Resolve Input
-inputParameter.error.message=This pipeline uses input types that are unsupported. Use Jenkins Classic to resolve parametrized build.
+inputParameter.error.unsupported=This pipeline uses unsupported input type(s) {0}. Use Jenkins Classic to resolve parametrized build.
+# The slash here is escaping a space, not the line feed
+inputParameter.error.unsupported.list_separator=,\ 
 inputParameter.error.title=Error
 go.to.classic=Go to classic
