--- a/blueocean-personalization/src/main/resources/jenkins/plugins/blueocean/personalization/Messages.properties
+++ b/blueocean-personalization/src/main/resources/jenkins/plugins/blueocean/personalization/Messages.properties
@@ -2,4 +2,4 @@ dashboardCard.input.required=Input Required
 dashboardCard.input.favorite=Favorites
 
 Favoriting.Error=Favoriting Error
-no.default.branch.to.favorite=No default branch (e.g. "master") to favorite
+no.default.branch.to.favorite=No default branch (e.g. "controller") to favorite
